--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
+      { "name": "typescript-plugin-css-modules" },
       {
         "name": "next"
       }
