--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "classnames": "^2.3.2",
-    "next": "13.4.1",
+    "next": "^13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
