--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "test:ci": "yarn prettier:ci && yarn tsc --noEmit --noEmitHelpers && yarn lint:ci"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "^3.0.0",
-    "@porsche-design-system/components-react": "^3.0.0",
+    "@porsche-design-system/components-js": "3.0.0",
+    "@porsche-design-system/components-react": "3.0.0",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "classnames": "^2.3.2",
-    "next": "^13.4.3",
+    "classnames": "2.3.2",
+    "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
@@ -38,6 +38,6 @@
     "@types/mdx": "2.0.5",
     "eslint": "8.40.0",
     "prettier": "2.8.8",
-    "typescript-plugin-css-modules": "^5.0.1"
+    "typescript-plugin-css-modules": "5.0.1"
   }
 }
