--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export && next-image-export-optimizer",
     "deploy": "next build && touch out/.nojekyll && git add out/ && git commit -m \"Deploy\" && git subtree push --prefix out origin gh-pages",
     "lint:ci": "eslint src/ --ext .js,.jsx,.tsx,.ts -f stylish",
     "lint:fix": "eslint src/ --fix --ext .js,.jsx,.tsx,.ts  -f stylish --quiet",
@@ -24,6 +25,7 @@
     "@types/react-dom": "18.2.4",
     "classnames": "2.3.2",
     "next": "13.4.3",
+    "next-image-export-optimizer": "^1.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
