--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@types/react-dom": "18.2.4",
     "classnames": "2.3.2",
     "next": "13.4.3",
-    "next-image-export-optimizer": "^1.7.0",
+    "next-image-export-optimizer": "1.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-focus-lock": "2.9.4",
+    "react-use": "17.4.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
