--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "classnames": "2.3.2",
+    "js-yaml-loader": "1.2.2",
     "next": "13.4.3",
     "next-image-export-optimizer": "1.7.0",
     "react": "18.2.0",
