--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@porsche-design-system/components-js": "3.0.0",
     "@porsche-design-system/components-react": "3.1.0-rc.1",
+    "@primer/octicons": "19.1.0",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
