Add second project to test design
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/data/projects.yml
+++ b/src/data/projects.yml
@@ -1,13 +1,13 @@
 heading: Projects
 items:
-  - title: cookie-consent-banner
-    subtitle: Lorem ipsum...
-    url: https://github.com/porscheofficial/cookie-consent-banner
-    imageSrc: https://raw.githubusercontent.com/porscheofficial/cookie-consent-banner/main/assets/logo.svg
+  - title: OSS Review Toolkit
+    subtitle: The OSS Review Toolkit (ORT) is a FOSS policy automation and orchestration toolkit which you can use to manage your (open source) software dependencies in a strategic, safe and efficient manner.
+    url: https://github.com/oss-review-toolkit/ort
+    imageSrc: https://raw.githubusercontent.com/oss-review-toolkit/ort/main/logos/ort.png
     imageAlt: Lorem ipsum...
-    stars: 12
-    fork: 3
-    status: Public
+    stars: 1.2k
+    fork: 240
+    status: Upstream
   - title: cookie-consent-banner
     subtitle: Lorem ipsum...
     url: https://github.com/porscheofficial/cookie-consent-banner
