Ignore further artifacts by next-image-export-optimizer
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,11 @@
 # next.js
 /.next/
 /out/
+
+# Next Export Image Optimizer
 **/nextImageExportOptimizer
+**/next-image-export-optimizer-hashes.json
+/remoteImagesForOptimization/
 
 # production
 /build
