--- a/src/data/news.yml
+++ b/src/data/news.yml
@@ -1,10 +1,6 @@
 heading: News & Media
 items:
-  - title: Porsche launches new open source initiative
-    url: https://newsroom.porsche.com/en/2021/innovation/porsche-launch-new-open-source-initiative-25798.html
-    imageSrc: https://newsroom.porsche.com/.imaging/mte/porsche-templating-theme/image_1290x726/dam/pnr/2021/Innovation/Porsche-launches-new-open-source-initiative/RP_-_Porsche_Taycan_London_Ballet-109.jpeg/jcr:content/RP_-_Porsche_Taycan_London_Ballet-109.jpeg
-    imageAlt: Taycan, 2021, Porsche AG
-  - title: The Porsche OSPO Journey
-    url: https://todogroup.org/guides/casestudies/porsche/
-    imageSrc: https://newsroom.porsche.com/.imaging/mte/porsche-templating-theme/image_1290x726/dam/pnr/2021/Innovation/Porsche-launches-new-open-source-initiative/RP_-_Porsche_Taycan_London_Ballet-109.jpeg/jcr:content/RP_-_Porsche_Taycan_London_Ballet-109.jpeg
-    imageAlt: Taycan, 2021, Porsche AG
+  - title: Porsche Launches New Open Source Initiative
+    url: https://medium.com/next-level-german-engineering/porsche-open-source-initiative-93f1f9b4471e
+    imageSrc: https://miro.medium.com/v2/resize:fit:720/0*Bz4OjfKbqsXSsfAI
+    imageAlt: Photo by Arnold Francisca on Unsplash
