--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next-image-export-optimizer --nextConfigPath ./next.config.js",
+    "start": "http-server out -p 3000",
     "lint:ci": "eslint src/ --ext .js,.jsx,.tsx,.ts -f stylish",
     "lint:fix": "eslint src/ --fix --ext .js,.jsx,.tsx,.ts  -f stylish --quiet",
     "prettier:ci": "prettier --check ./",
@@ -39,6 +40,7 @@
     "@porscheofficial/prettier-config-porschedigital": "3.0.1",
     "@types/mdx": "2.0.5",
     "eslint": "8.40.0",
+    "http-server": "14.1.1",
     "prettier": "2.8.8",
     "typescript-plugin-css-modules": "5.0.1"
   }
