--- a/package.json
+++ b/package.json
@@ -20,16 +20,11 @@
     "@porsche-design-system/components-js": "3.1.0",
     "@porsche-design-system/components-react": "3.1.0",
     "@primer/octicons": "19.2.0",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
     "classnames": "2.3.2",
-    "js-yaml-loader": "1.2.2",
     "next": "13.4.5",
     "next-image-export-optimizer": "1.7.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@mdx-js/loader": "2.3.0",
@@ -39,9 +34,14 @@
     "@porscheofficial/eslint-config-porschedigital-react": "3.0.1",
     "@porscheofficial/prettier-config-porschedigital": "3.0.1",
     "@types/mdx": "2.0.5",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
     "eslint": "8.42.0",
     "http-server": "14.1.1",
+    "js-yaml-loader": "1.2.2",
     "prettier": "2.8.8",
+    "typescript": "5.1.3",
     "typescript-plugin-css-modules": "5.0.1"
   }
 }
