--- a/src/data/news.yml
+++ b/src/data/news.yml
@@ -6,5 +6,5 @@ items:
     imageAlt: Photo by Arnold Francisca on Unsplash
   - title: Porsche Launches New Open Source Initiative
     url: https://medium.com/next-level-german-engineering/porsche-open-source-initiative-93f1f9b4471e
-    imageSrc: https://miro.medium.com/v2/resize:fit:720/0*Bz4OjfKbqsXSsfAI
+    imageSrc: /assets/cover5.png
     imageAlt: Photo by Arnold Francisca on Unsplash
