--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "classnames": "2.3.2",
     "next": "13.4.6",
     "next-image-export-optimizer": "1.7.0",
-    "prismjs": "^1.29.0",
+    "prism-react-renderer": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
