--- a/a11y-config.json
+++ b/a11y-config.json
@@ -2,9 +2,7 @@
   "name": "porscheofficial.github.io",
   "json": true,
   "threshold": 1,
-  "urlsToAnalyze": [
-    "https://porscheofficial-github-io.vercel.app"
-  ],
+  "urlsToAnalyze": ["https://porscheofficial-github-io.vercel.app"],
   "resultsPath": "a11y-results",
   "resultTypes": ["violations", "incomplete"],
   "crawl": true,
