🚧 WIP: Adapt Figma design
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/data/memberships.yml
+++ b/src/data/memberships.yml
@@ -2,7 +2,7 @@ heading: Partnerships
 items:
   - title: TODO Group
     url: https://todogroup.org/
-    imageSrc: https://todogroup.org/img/logo.svg
+    imageSrc: /assets/logos/logo_todogroup.svg
     imageAlt: TODO Group Logo
     description: |
       Porsche AG is a General Member of TODO Group. TODO is an open community of
