--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Wait for all tests to succeed
         uses: lewagon/wait-on-check-action@v1.3.1
         with:
-          ref: main
-          running-workflow-name: build
+          ref: ${{ github.sha }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          running-workflow-name: build
           wait-interval: 20
       - name: Checkout
         uses: actions/checkout@v3
