:sparkles: feat: add canonical headers

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,8 @@ jobs:
         run: yarn install --immutable
       - name: Build with Next.js
         run: yarn build
+        env:
+          BASE_URL: "opensource.porsche.com"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
