--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@porsche-design-system/components-react": "3.5.0",
     "@primer/octicons": "19.3.0",
     "classnames": "2.3.2",
+    "contentlayer": "0.3.4",
     "next": "13.4.6",
+    "next-contentlayer": "0.3.4",
     "next-image-export-optimizer": "1.7.0",
     "prism-react-renderer": "2.0.5",
     "react": "18.2.0",
