--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@primer/octicons": "19.3.0",
     "classnames": "2.3.2",
     "contentlayer": "0.3.4",
+    "date-fns": "2.30.0",
     "next": "13.4.6",
     "next-contentlayer": "0.3.4",
     "next-image-export-optimizer": "1.7.0",
