Adapt configuration to new ORT version
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/.ort.yml
+++ b/.ort.yml
@@ -1,4 +1,6 @@
 # See: https://github.com/oss-review-toolkit/ort/blob/main/docs/config-file-ort-yml.md
+analyzer:
+  skip_excluded: true
 excludes:
   paths:
     - pattern: ".github/**"
