--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "test:ci": "yarn contentlayer:build && yarn prettier:ci && yarn tsc --noEmit --noEmitHelpers && yarn lint:ci"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "3.5.0",
-    "@porsche-design-system/components-react": "3.5.0",
-    "@primer/octicons": "19.3.0",
+    "@porsche-design-system/components-js": "3.6.0-rc.1",
+    "@porsche-design-system/components-react": "3.6.0-rc.1",
+    "@primer/octicons": "19.6.0",
     "classnames": "2.3.2",
     "contentlayer": "0.3.4",
     "date-fns": "2.30.0",
-    "next": "13.4.6",
+    "next": "13.4.19",
     "next-contentlayer": "0.3.4",
-    "next-image-export-optimizer": "1.7.0",
-    "prism-react-renderer": "2.0.5",
+    "next-image-export-optimizer": "1.8.3",
+    "prism-react-renderer": "2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -36,20 +36,20 @@
     "@axe-core/playwright": "4.7.3",
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
-    "@next/eslint-plugin-next": "13.4.6",
-    "@next/mdx": "13.4.6",
-    "@playwright/test": "1.35.1",
-    "@porscheofficial/eslint-config-porschedigital-react": "3.0.1",
-    "@porscheofficial/prettier-config-porschedigital": "3.0.1",
-    "@types/mdx": "2.0.5",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "eslint": "8.42.0",
+    "@next/eslint-plugin-next": "13.4.19",
+    "@next/mdx": "13.4.19",
+    "@playwright/test": "1.37.1",
+    "@porscheofficial/eslint-config-porschedigital-react": "4.0.0",
+    "@porscheofficial/prettier-config-porschedigital": "4.0.0",
+    "@types/mdx": "2.0.7",
+    "@types/node": "20.5.4",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.47.0",
     "http-server": "14.1.1",
     "js-yaml-loader": "1.2.2",
-    "prettier": "2.8.8",
-    "typescript": "5.1.3",
+    "prettier": "3.0.2",
+    "typescript": "5.1.6",
     "typescript-plugin-css-modules": "5.0.1"
   },
   "resolutions": {
