docs: Result is not sent to scanner API
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/.github/workflows/oso-analyzer.yml
+++ b/.github/workflows/oso-analyzer.yml
@@ -12,7 +12,7 @@ jobs:
     name: OSO ORT
     steps:
       - uses: actions/checkout@v3
-      - name: Run OSO ORT Analyzer and Submit to Scanner API
+      - name: Run OSO ORT Analyzer
         id: analyzer
         uses: porscheofficial/.github/workflows/ort-analyze@main
         with:
