--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "test:ci": "yarn contentlayer:build && yarn prettier:ci && yarn tsc --noEmit --noEmitHelpers && yarn lint:ci"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "3.6.0-rc.1",
-    "@porsche-design-system/components-react": "3.6.0-rc.1",
+    "@porsche-design-system/components-js": "3.6.1",
+    "@porsche-design-system/components-react": "3.6.1",
     "@primer/octicons": "19.6.0",
     "classnames": "2.3.2",
     "contentlayer": "0.3.4",
     "date-fns": "2.30.0",
     "next": "13.4.19",
     "next-contentlayer": "0.3.4",
-    "next-image-export-optimizer": "1.8.4",
+    "next-image-export-optimizer": "1.8.5",
     "prism-react-renderer": "2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -42,14 +42,14 @@
     "@porscheofficial/eslint-config-porschedigital-react": "4.0.0",
     "@porscheofficial/prettier-config-porschedigital": "4.0.0",
     "@types/mdx": "2.0.7",
-    "@types/node": "20.5.4",
+    "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "eslint": "8.47.0",
+    "eslint": "8.48.0",
     "http-server": "14.1.1",
     "js-yaml-loader": "1.2.2",
-    "prettier": "3.0.2",
-    "typescript": "5.1.6",
+    "prettier": "3.0.3",
+    "typescript": "5.2.2",
     "typescript-plugin-css-modules": "5.0.1"
   },
   "resolutions": {
