--- a/package.json
+++ b/package.json
@@ -15,37 +15,39 @@
     "prettier:ci": "prettier --check ./",
     "prettier:fix": "prettier --write ./",
     "playwright:run": "yarn playwright test",
-    "test:ci": "yarn prettier:ci && yarn tsc --noEmit --noEmitHelpers && yarn lint:ci"
+    "contentlayer:build": "contentlayer build",
+    "test:ci": "yarn contentlayer:build && yarn prettier:ci && yarn tsc --noEmit --noEmitHelpers && yarn lint:ci"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "3.5.0",
-    "@porsche-design-system/components-react": "3.5.0",
-    "@primer/octicons": "19.3.0",
-    "classnames": "2.3.2",
-    "next": "13.4.6",
-    "next-image-export-optimizer": "1.8.4",
-    "prism-react-renderer": "2.0.5",
+    "@porsche-design-system/components-js": "3.6.1",
+    "@porsche-design-system/components-react": "3.6.1",
+    "@primer/octicons": "19.6.0",
+    "contentlayer": "0.3.4",
+    "date-fns": "2.30.0",
+    "next": "13.4.19",
+    "next-contentlayer": "0.3.4",
+    "next-image-export-optimizer": "1.8.5",
+    "prism-react-renderer": "2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@axe-core/playwright": "4.7.3",
-    "@mdx-js/loader": "2.3.0",
-    "@mdx-js/react": "2.3.0",
-    "@next/eslint-plugin-next": "13.4.6",
-    "@next/mdx": "13.4.6",
-    "@playwright/test": "1.35.1",
-    "@porscheofficial/eslint-config-porschedigital-react": "3.0.1",
-    "@porscheofficial/prettier-config-porschedigital": "3.0.1",
-    "@types/mdx": "2.0.5",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "eslint": "8.42.0",
+    "@next/bundle-analyzer": "13.4.19",
+    "@next/eslint-plugin-next": "13.4.19",
+    "@playwright/test": "1.37.1",
+    "@porscheofficial/eslint-config-porschedigital-react": "4.0.0",
+    "@porscheofficial/prettier-config-porschedigital": "4.0.0",
+    "@types/mdx": "2.0.7",
+    "@types/node": "20.5.7",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.48.0",
     "http-server": "14.1.1",
     "js-yaml-loader": "1.2.2",
-    "prettier": "2.8.8",
-    "typescript": "5.1.3",
+    "playwright-core": "1.37.1",
+    "prettier": "3.0.3",
+    "typescript": "5.2.2",
     "typescript-plugin-css-modules": "5.0.1"
   },
   "resolutions": {
