--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,28 +32,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Wait for all tests to succeed
-        uses: lewagon/wait-on-check-action@v1.3.1
-        with:
-          ref: ${{ github.sha }}
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          check-name: "Tests"
-          wait-interval: 20
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
+        uses: actions/checkout@v4
+      - name: "Use Node.js 18"
+        uses: "actions/setup-node@v3"
         with:
-          node-version: 18
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      # According to: https://github.com/actions/cache/blob/main/examples.md#node---yarn-2
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn config get cacheFolder)" >> "$GITHUB_OUTPUT"
-      - name: Restore yarn cache
-        uses: actions/cache@v3
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+          node-version: "18"
+      - name: "Get yarn cache directory path"
+        id: "yarn-cache-dir-path"
+        run: 'echo "dir=$(yarn config get cacheFolder)" >> "$GITHUB_OUTPUT"'
+      - name: "Restore yarn cache"
+        uses: "actions/cache@v3"
+        id: "yarn-cache"
         with:
           path: |
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -61,12 +51,15 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock', '.yarnrc.yml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock', '.yarnrc.yml') }}-
-      - name: Install dependencies
-        run: yarn install --immutable
+      - run: "yarn install --immutable"
+      - name: Automated Tests and Linting
+        uses: ./.github/actions/tests
       - name: Build with Next.js
         run: yarn build
         env:
           BASE_URL: "opensource.porsche.com"
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
