--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@
 
 name: Tests and Linting
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   # ==============================================================================
@@ -13,5 +13,23 @@ jobs:
     name: Automated Tests and Linting
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - name: "Use Node.js 18"
+        uses: "actions/setup-node@v3"
+        with:
+          node-version: "18"
+      - name: "Get yarn cache directory path"
+        id: "yarn-cache-dir-path"
+        run: 'echo "dir=$(yarn config get cacheFolder)" >> "$GITHUB_OUTPUT"'
+      - name: "Restore yarn cache"
+        uses: "actions/cache@v3"
+        id: "yarn-cache"
+        with:
+          path: |
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock', '.yarnrc.yml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock', '.yarnrc.yml') }}-
+      - run: "yarn install --immutable"
       - uses: ./.github/actions/tests
