--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next-image-export-optimizer --nextConfigPath ./next.config.js",
-    "start": "http-server out -p 3000",
+    "start": "http-server out -p 3001",
     "lint:ci": "eslint src/ --ext .js,.jsx,.tsx,.ts -f stylish",
     "lint:fix": "eslint src/ --fix --ext .js,.jsx,.tsx,.ts  -f stylish --quiet",
     "prettier:ci": "prettier --check ./",
@@ -24,6 +24,7 @@
     "@primer/octicons": "19.6.0",
     "contentlayer": "0.3.4",
     "date-fns": "2.30.0",
+    "dotenv": "16.3.1",
     "next": "13.4.19",
     "next-contentlayer": "0.3.4",
     "next-image-export-optimizer": "1.8.5",
