--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "dotenv": "16.3.1",
     "eslint": "8.48.0",
     "http-server": "14.1.1",
     "js-yaml-loader": "1.2.2",
