--- a/data/news.yml
+++ b/data/news.yml
@@ -3,7 +3,7 @@ items:
   - title: |
       Nik Peters elected as member of TODO Group Steering Committee 2024
     url: https://todogroup.org/blog/2024-steering-committee/
-    imageSrc: https://github.com/todogroup/todogroup.org/assets/43671777/0a4cfd31-89fb-49d6-a38b-797f4c20c40f
+    imageSrc: https://github-production-user-asset-6210df.s3.amazonaws.com/43671777/287491838-0a4cfd31-89fb-49d6-a38b-797f4c20c40f.png
     imageAlt: TODO Group Steering Committee 2024
   - title: |
       FOSS Movement: Porsche accelerates open source initiative with board member support
