--- a/data/news.yml
+++ b/data/news.yml
@@ -1,6 +1,11 @@
 heading: News & Media
 items:
   - title: |
+      OSPO Book: Porsche End-User Journey Report
+    url: https://ospobook.todogroup.org/use-cases/
+    imageSrc: http://ospobook.todogroup.org/images/ospo-book-social.jpg
+    imageAlt: OSPO End-User Journeys
+  - title: |
       Nik Peters elected as member of TODO Group Steering Committee 2024
     url: https://todogroup.org/blog/2024-steering-committee/
     imageSrc: https://github-production-user-asset-6210df.s3.amazonaws.com/43671777/287491838-0a4cfd31-89fb-49d6-a38b-797f4c20c40f.png
