--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@primer/octicons": "19.8.0",
     "contentlayer": "0.3.4",
     "date-fns": "2.30.0",
-    "next": "13.5.6",
+    "next": "^14.2.3",
     "next-contentlayer": "0.3.4",
     "next-image-export-optimizer": "1.12.2",
     "prism-react-renderer": "2.3.1",
