⬆️ Upgrade dependencies, switch to contentlayer2 fork by @timlrx
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/package.json
+++ b/package.json
@@ -15,44 +15,40 @@
     "prettier:ci": "prettier --check ./",
     "prettier:fix": "prettier --write ./",
     "playwright:run": "yarn playwright test",
-    "contentlayer:build": "contentlayer build",
+    "contentlayer:build": "contentlayer2 build",
     "test:ci": "yarn contentlayer:build && yarn prettier:ci && yarn tsc --noEmit --noEmitHelpers && yarn lint:ci"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "3.11.0",
-    "@porsche-design-system/components-react": "3.11.0",
-    "@primer/octicons": "19.8.0",
-    "contentlayer": "0.3.4",
-    "date-fns": "2.30.0",
+    "@porsche-design-system/components-js": "3.15.1",
+    "@porsche-design-system/components-react": "3.15.1",
+    "@primer/octicons": "19.9.0",
+    "contentlayer2": "0.4.6",
+    "date-fns": "3.6.0",
     "next": "^14.2.3",
-    "next-contentlayer": "0.3.4",
-    "next-image-export-optimizer": "1.12.2",
+    "next-contentlayer2": "0.4.6",
+    "next-image-export-optimizer": "1.13.0",
     "prism-react-renderer": "2.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@axe-core/playwright": "4.8.4",
-    "@next/bundle-analyzer": "13.5.6",
-    "@next/eslint-plugin-next": "13.5.6",
-    "@playwright/test": "1.41.1",
+    "@axe-core/playwright": "4.9.1",
+    "@next/bundle-analyzer": "14.2.3",
+    "@next/eslint-plugin-next": "14.2.3",
+    "@playwright/test": "1.44.1",
     "@porscheofficial/eslint-config-porschedigital-react": "4.0.0",
     "@porscheofficial/prettier-config-porschedigital": "4.0.0",
-    "@types/mdx": "2.0.11",
-    "@types/node": "20.11.14",
-    "@types/react": "18.2.50",
-    "@types/react-dom": "18.2.18",
-    "dotenv": "16.4.1",
-    "eslint": "8.56.0",
+    "@types/mdx": "2.0.13",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "dotenv": "16.4.5",
+    "eslint": "8.57.0",
     "http-server": "14.1.1",
     "js-yaml-loader": "1.2.2",
-    "playwright-core": "1.41.1",
-    "prettier": "3.2.4",
-    "typescript": "5.3.3",
-    "typescript-plugin-css-modules": "5.0.2"
-  },
-  "resolutions": {
-    "semver": "7.5.3",
-    "word-wrap": "aashutoshrathi/word-wrap"
+    "playwright-core": "1.44.1",
+    "prettier": "3.2.5",
+    "typescript": "5.4.5",
+    "typescript-plugin-css-modules": "5.1.0"
   }
 }
