switch to contentlayer2 fork by timlrx

--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "prettier:ci": "prettier --check ./",
     "prettier:fix": "prettier --write ./",
     "playwright:run": "yarn playwright test",
-    "contentlayer:build": "contentlayer build",
+    "contentlayer:build": "contentlayer2 build",
     "test:ci": "yarn contentlayer:build && yarn prettier:ci && yarn tsc --noEmit --noEmitHelpers && yarn lint:ci"
   },
   "dependencies": {
     "@porsche-design-system/components-js": "3.21.0",
     "@porsche-design-system/components-react": "3.21.0",
     "@primer/octicons": "19.12.0",
-    "contentlayer": "0.3.4",
+    "contentlayer2": "0.5.3",
     "date-fns": "2.30.0",
     "next": "14.2.18",
-    "next-contentlayer": "0.3.4",
+    "next-contentlayer2": "0.5.3",
     "next-image-export-optimizer": "1.18.0",
     "prism-react-renderer": "2.4.0",
     "react": "18.3.1",
