--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
     "test:ci": "yarn contentlayer:build && yarn prettier:ci && yarn tsc --noEmit --noEmitHelpers && yarn lint:ci"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "3.21.0",
-    "@porsche-design-system/components-react": "3.21.0",
+    "@porsche-design-system/components-js": "3.22.1",
+    "@porsche-design-system/components-react": "3.22.1",
     "@primer/octicons": "19.12.0",
     "contentlayer2": "0.5.3",
     "date-fns": "2.30.0",
-    "next": "14.2.18",
+    "next": "15.0.4",
     "next-contentlayer2": "0.5.3",
     "next-image-export-optimizer": "1.18.0",
     "prism-react-renderer": "2.4.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@axe-core/playwright": "4.10.1",
-    "@next/bundle-analyzer": "13.5.7",
-    "@next/eslint-plugin-next": "13.5.7",
+    "@next/bundle-analyzer": "15.0.4",
+    "@next/eslint-plugin-next": "15.0.4",
     "@playwright/test": "1.49.0",
     "@porscheofficial/eslint-config-porschedigital-react": "4.0.0",
     "@porscheofficial/prettier-config-porschedigital": "4.0.0",
     "@types/mdx": "2.0.13",
     "@types/node": "20.17.9",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
     "dotenv": "16.4.6",
     "eslint": "8.57.1",
     "http-server": "14.1.1",
@@ -53,6 +53,8 @@
   },
   "resolutions": {
     "semver": "7.5.3",
-    "word-wrap": "aashutoshrathi/word-wrap"
+    "word-wrap": "aashutoshrathi/word-wrap",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2"
   }
 }
