--- a/package.json
+++ b/package.json
@@ -15,44 +15,46 @@
     "prettier:ci": "prettier --check ./",
     "prettier:fix": "prettier --write ./",
     "playwright:run": "yarn playwright test",
-    "contentlayer:build": "contentlayer build",
+    "contentlayer:build": "contentlayer2 build",
     "test:ci": "yarn contentlayer:build && yarn prettier:ci && yarn tsc --noEmit --noEmitHelpers && yarn lint:ci"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "3.21.0",
-    "@porsche-design-system/components-react": "3.21.0",
-    "@primer/octicons": "19.8.0",
-    "contentlayer": "0.3.4",
+    "@porsche-design-system/components-js": "3.22.1",
+    "@porsche-design-system/components-react": "3.22.1",
+    "@primer/octicons": "19.12.0",
+    "contentlayer2": "0.5.3",
     "date-fns": "2.30.0",
-    "next": "13.5.6",
-    "next-contentlayer": "0.3.4",
-    "next-image-export-optimizer": "1.12.2",
-    "prism-react-renderer": "2.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "15.0.4",
+    "next-contentlayer2": "0.5.3",
+    "next-image-export-optimizer": "1.18.0",
+    "prism-react-renderer": "2.4.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@axe-core/playwright": "4.8.4",
-    "@next/bundle-analyzer": "13.5.6",
-    "@next/eslint-plugin-next": "13.5.6",
-    "@playwright/test": "1.41.1",
+    "@axe-core/playwright": "4.10.1",
+    "@next/bundle-analyzer": "15.0.4",
+    "@next/eslint-plugin-next": "15.0.4",
+    "@playwright/test": "1.49.0",
     "@porscheofficial/eslint-config-porschedigital-react": "4.0.0",
     "@porscheofficial/prettier-config-porschedigital": "4.0.0",
-    "@types/mdx": "2.0.11",
-    "@types/node": "20.11.14",
-    "@types/react": "18.2.50",
-    "@types/react-dom": "18.2.18",
-    "dotenv": "16.4.1",
-    "eslint": "8.56.0",
+    "@types/mdx": "2.0.13",
+    "@types/node": "20.17.9",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
+    "dotenv": "16.4.6",
+    "eslint": "8.57.1",
     "http-server": "14.1.1",
     "js-yaml-loader": "1.2.2",
-    "playwright-core": "1.41.1",
-    "prettier": "3.2.4",
-    "typescript": "5.3.3",
-    "typescript-plugin-css-modules": "5.0.2"
+    "playwright-core": "1.49.0",
+    "prettier": "3.4.1",
+    "typescript": "5.7.2",
+    "typescript-plugin-css-modules": "5.1.0"
   },
   "resolutions": {
     "semver": "7.5.3",
-    "word-wrap": "aashutoshrathi/word-wrap"
+    "word-wrap": "aashutoshrathi/word-wrap",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2"
   }
 }
